@@ -4708,3 +4708,4 @@
          win32/options.pl},uimedia.c: use libspectrum_free where appropriate
          (Sergio).
 20150317 z80/z80.c: set AF, AF' and SP to 0xffff on reset (Stuart).
+20150317 z80/z80.c: leave most registers unchanged on a soft reset (Stuart).
